--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -22,7 +22,7 @@ const wordCountStr = (wordCount / 1000).toFixed(1) + 'k'
       <span>共瞎逼逼了 {wordCountStr} 字</span>
     </div>
     <div class="space-x-1">
-      <span>&copy;{copyDate} <Link href="/">呐吼</Link> 版权所有</span>
+      <span>© 2025 <Link href="/">老儒杂谈</Link> 版权所有</span>
       <Link href="/rss.xml" data-no-swup>
         <i class="iconfont icon-rss"></i>
         <span>RSS</span>
@@ -35,7 +35,7 @@ const wordCountStr = (wordCount / 1000).toFixed(1) + 'k'
       </Link>
     </div>
     <div class="text-sm">
-      <Link href="https://beian.miit.gov.cn/">蜀ICP备2025147436号-2</Link>
+      <Link href="https://beian.miit.gov.cn/">蜀ICP备2025147436号-3</Link>
         <span class="select-none opacity-50">丨</span>
       <Link href="https://beian.mps.gov.cn/#/query/webSearch?code=51068202000278">
         <img src="/i/ga.png" alt="公安备案图标" class="inline-block h-4 w-auto mr-1 align-text-bottom">
